# repo_jarvislive

./: .cursorrules  .gitignore  .last_backup_path  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  STYLE_GUIDE.md  ci-pipeline-validation-report.md  ci_hardening_validation_report.json
.github/workflows/: README.md  advanced-error-monitoring.yml  ci.yml  error-monitoring.yml  main_ci.yml  performance-intelligence.yml  performance-monitoring.yml
_backups/production/production_backup_20250628_050014/: backup_metadata.json
_iOS/: .swiftlint.yml  Package.resolved  Package.swift  swiftlint_baseline_report.txt
_iOS/.build/: plugin-tools.yaml  workspace-state.json
_iOS/.build/arm64-apple-macosx/debug/: plugin-tools-description.json
_iOS/.build/repositories/swift-snapshot-testing-fc18b6b3/: FETCH_HEAD  packed-refs
_iOS/.build/repositories/swift-syntax-e1f983d3/: FETCH_HEAD  packed-refs
_iOS/.build/repositories/xctest-dynamic-overlay-05ffcdf0/: FETCH_HEAD
_iOS/JarvisLive/: .swiftlint.yml  Package.swift  project.yml
_iOS/JarvisLive-Sandbox/: .swiftlint.yml  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TESTING_FRAMEWORK.md  Package.resolved  Package.swift  project.yml  run_integration_tests.sh
_iOS/JarvisLive-Sandbox/Demo/: VoicePipelineDemoScript.swift
_iOS/JarvisLive-Sandbox/JarvisLive-Sandbox/: ContentView.swift  Info.plist  JarvisLiveSandboxApp.swift
_iOS/JarvisLive-Sandbox/JarvisLive-Sandbox.xcodeproj/: project.pbxproj
_iOS/JarvisLive-Sandbox/JarvisLive.xcodeproj/: project.pbxproj
_iOS/JarvisLive-Sandbox/JarvisLiveTests/: JarvisLiveTests.swift  PerformanceTests.swift
_iOS/JarvisLive-Sandbox/JarvisLiveUITests/: JarvisLiveUITests.swift
_iOS/JarvisLive-Sandbox/Scripts/: verify_certificate_pinning.sh
_iOS/JarvisLive-Sandbox/Sources/App/: JarvisLiveApp.swift  JarvisLiveSandboxApp.swift
_iOS/JarvisLive-Sandbox/Sources/Core/: SettingsManager.swift  SimpleConversationManager.swift
_iOS/JarvisLive-Sandbox/Tests/JarvisLiveSandboxTests/: AIProviderIntegrationTests.swift  AuthenticationFlowTests.swift  CertificatePinningTests.swift  VoiceClassificationManagerTests.swift  VoiceCommandPipelineTests.swift
_iOS/JarvisLive/JarvisLive-Sandbox/: Info.plist
_iOS/JarvisLive/JarvisLive.xcodeproj/: project.pbxproj
_iOS/JarvisLive/Resources/: Info.plist  LaunchScreen.storyboard
_python/: ENDPOINTS.md  IMPLEMENTATION_SUMMARY.md  README.md  VOICE_CLASSIFICATION_API.md  main_minimal.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_ci_tests.py  run_e2e_tests.py  run_minimal_ci_tests.py  start_server.py  test_implementation.py  test_ios_integration.py  test_runner.py  validation_minimal.py  verify_implementation.py  verify_voice_classification.py
_python/reports/: backend_test_evidence.html
_python/src/: main.py  main_minimal.py  main_secure.py  main_test_simple.py  mcp_bridge.py
_python/src/ai/: __init__.py  advanced_voice_processor.py  context_manager.py  voice_classifier.py
_python/src/api/: auth_routes.py  models.py  models_simple.py  routes.py  websocket_manager.py
_python/src/auth/: jwt_auth.py
_python/src/mcp/: ai_providers.py  document_server.py  email_server.py  search_server.py  voice_server.py
_python/tests/: test_api_endpoints.py  test_api_simple.py  test_voice_classifier.py
_python/tests/e2e/: __init__.py  conftest.py  test_api_endpoints.py  test_mcp_integration.py  test_websocket_communication.py
_python/tests/performance/: run_performance_tests.py  test_benchmark_micro.py  test_load_performance.py
_quarantine/analytics_and_intelligence/: ConversationIntelligence.swift  ConversationSummarizer.swift  ConversationTopicTracker.swift  UserPersonalizationEngine.swift  VoiceParameterIntelligence.swift  conversation_analytics.py  performance_optimizer.py
docs/: ARCHITECTURE.md  AUDIT_COMPLETION_REPORT.md  BLUEPRINT.md  CI_HARDENING_FINAL_REPORT.md  CI_HARDENING_SUMMARY.md  CORE_COMPONENTS.md  DEVELOPMENT_LOG.md  DISASTER_RECOVERY_PROGRESS_REPORT.md  FINAL_AUDIT_VALIDATION.md  IOS_DEPENDENCY_AUDIT.md  MCP_ARCHITECTURE.md  MCP_CONTEXT_MANAGEMENT.md  TASKS.md
docs/UX_Snapshots/: README.md
logs/: sandbox_production_divergence.diff
scripts/: advanced_build_validation.sh  ci_hardening.sh  create_xcode_project.sh  demo_mcp_context.py  deployment_resilience.sh  deployment_safety_check.sh  enterprise_build_validation.sh  harden_ci_pipeline.sh  prepare_release.sh  promote_sandbox_to_production.sh  run_quality_validation.sh  validate_ci_hardening.sh  validate_ci_pipeline.sh  validate_ci_setup.sh
(+867 files in other folders)
